Improved test.